--- a/css/page.css
+++ b/css/page.css
@@ -53,6 +53,17 @@
     font-size: 20px;
 }
 
+.progress-bar {
+    float: left;
+    width: 0;
+    height: 100%;
+    font-size: 12px;
+    line-height: 20px;
+    color: #fff;
+    text-align: center;
+    background-color: #1abc9c;
+}
+
 .progress-time {
     font-size: 20px;
     position: absolute;
