--- a/css/page.css
+++ b/css/page.css
@@ -96,8 +96,8 @@
  display:block;
  width:100%;
  line-height:40px;
- font-size:16px;
-
+ font-size:16px !important;
+ padding: 5px 0;
 }
 
 .radio{
@@ -107,8 +107,9 @@
  border-radius: 2px;
 }
 
-.radio span {
+.radio .icon {
 	margin-left : 10px;
+	margin-right : 10px;
 }
 
 .topic .checked{
