--- a/css/icon.css
+++ b/css/icon.css
@@ -1,7 +1,3 @@
-a,,span,div,li,ul,ol,p{
-	margin: 0;
-	padding: 0;
-}
 
 .radio{
     cursor: pointer;
@@ -74,6 +70,19 @@ a,,span,div,li,ul,ol,p{
     width: 60px;
     font-size: 14px;
     padding: 5px 0 6px;
+}
+
+.btn-analysis {
+    padding: 5px 10px;
+    margin: -2px 10px 0;
+    width: auto;
+    vertical-align: middle;
+}
+
+.btn-blue {
+    float: left;
+    background-color: #5395e0;
+    color: #FFF;
 }
 
 .close {
