--- a/css/index.css
+++ b/css/index.css
@@ -88,7 +88,7 @@ body {
     top: 21px;
     color: #8a96a7;
  }
- 
+
  .module-box {
     border: 1px solid #e0e0e0;
     border-radius: 3px;
@@ -103,9 +103,10 @@ body {
     padding-bottom: 250px;
 }
 
-.module-box a{
+.home-items a{
 	display: inline-block;
-    margin: 0 22px;
+  margin: 0 20px;
+  text-align: center;
 }
 
 .module-head p:before {
